Fix Login component size on Firefox

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -6,7 +6,6 @@
 
   max-width: 400px;
   max-height: 400px;
-  height: 100%;
   margin: auto;
   margin-top: 40px;
   border-radius: 16px;
